cmake_minimum_required(VERSION 2.8)

project(advcpp)

SET(CMAKE_CXX_STANDARD 17)
#SET(CMAKE_CXX_STANDARD_REQUIRED ON)
#SET(CMAKE_CXX_EXTENSIONS OFF)

add_executable(w1a1 "week1-app1.cpp")
add_executable(w2a1 "week2-app1.cpp")
add_executable(w3a1 "week3-app1.cpp")
add_executable(w3a2 "week3-app2.cpp")
add_executable(w3a3 "week3-app3.cpp")
add_executable(w4a1 "week4-app1.cpp")
add_executable(w5a1 "week5-app1.cpp")
add_executable(w6a1 "week6-app1.cpp")
add_executable(w6a2 "week6-app2.cpp")
add_executable(w6a3 "week6-app3.cpp")
add_executable(w6a4 "week6-app4.cpp")
add_executable(mt1 "week7-mt.cpp")
add_executable(w8a1 "week8-app1.cpp")
add_executable(w8a2 "week8-app2.cpp")
add_executable(w8a3 "week8-app3.cpp")
add_executable(w8a4 "week8-app4.cpp")
add_executable(w8a5 "week8-app5.cpp")
add_executable(w8a6 "week8-app6.cpp")
